# MauiScan

./: .gitignore  BUILD_GUIDE.md  CV精修优化方案.md  CV预处理优化计划.md  ML_IMPLEMENTATION.md  MauiScan.slnx  PROJECT_STATUS.md  README.md  analyze_preprocessing_results.py  cv_debug_visualizer.py  export_test_data.ps1  test_center_filter.py  test_combination_methods.py  test_preprocessing_methods.py
.claude/: CLAUDE.md  settings.local.json
AnnotationTool/: Form1.Designer.cs  Form1.cs  Program.cs  README.md
HeicConverter/: HeicConverter.csproj  Program.cs
MauiScan/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MauiScan.csproj
MauiScan.ML/: MauiScan.ML.csproj  README.md
MauiScan.ML.Training/: README.md  REFINEMENT_PLAN.md  analyze_overfit.py  check_error.py  overfit_test.py  overfit_test_fixed.py  overfit_test_v2.py  overfit_test_v2_lowlr.py  preprocess_augment.py  requirements.txt  resume_v2_lowlr.py  test_single_image.py  train_augmented.py  train_enhanced.py  train_full_fixed.py  train_opencv.py  train_simple.py  validate_model.py
MauiScan.ML.Training/models/: corner_detector.py  corner_detector_v2.py  export_onnx.py
MauiScan.ML/Interop/: NativeOpenCv.cs
MauiScan.ML/Models/: MLDetectionResult.cs  ModelConfig.cs
MauiScan.ML/Services/: IMLInferenceService.cs  OnnxInferenceService.cs  ProcessingMode.cs
MauiScan.Server/: MauiScan.Server.http  Program.cs  appsettings.json
MauiScan.Server/Controllers/: ScansController.cs  TrainingController.cs
MauiScan.Server/Hubs/: ScanHub.cs
MauiScan.Server/Models/: ScanImageDto.cs
MauiScan.Server/Services/: FileStorageService.cs
MauiScan.Server/linux/: README.md  deploy.ps1  mauiscan-server.service  mauiscan.origami7023.net.cn.conf
MauiScan/Controls/: CameraView.cs
MauiScan/Models/: QuadrilateralPoints.cs  ScanImageDto.cs  ScanResult.cs  TwoStageDetectionResult.cs
MauiScan/Services/: ICameraService.cs  IClipboardService.cs  IDragDropService.cs  IImageProcessingService.cs  IManualAnnotationService.cs  ImageCropService.cs  NativeImageProcessingService.cs  TwoStageDetectionService.cs
MauiScan/Services/Sync/: ScanSyncService.cs
MauiScan/Views/: CameraPage.xaml  CameraPage.xaml.cs  HistoryPage.xaml  HistoryPage.xaml.cs  MLTestPage.xaml  MLTestPage.xaml.cs  ScanPage.xaml  ScanPage.xaml.cs  TwoStageDetectionTestPage.xaml  TwoStageDetectionTestPage.xaml.cs
Native.OpenCV/: README.md
Native.OpenCV/android/: CMakeLists.txt  README.md  build-android.bat  build-android.sh
Native.OpenCV/ios/: CMakeLists.txt  build-ios.sh
Native.OpenCV/src/: opencv_scanner.cpp  opencv_scanner.h
